# tzf-dist

./: Cargo.toml  README.md  STATS.md  checksums.md5  embed.go  go.mod
.github/workflows/: build.yml  release.yml
scripts/: gen_stats.py
src/: full.rs  lib.rs
